fixing alignment of thumbnails

--- a/state_2c_geonode/static/css/site_base.css
+++ b/state_2c_geonode/static/css/site_base.css
@@ -4989,6 +4989,8 @@ a.badge:focus {
   -webkit-transition: border 0.2s ease-in-out;
   -o-transition: border 0.2s ease-in-out;
   transition: border 0.2s ease-in-out;
+  border: #777777;
+  border-style: solid;
 }
 .thumbnail > img,
 .thumbnail a > img {
